tests/semantic/fact_cat/fact_cat.err
Error: Function in fact in file fact_cat.dl at line 7
F(cat("x","y"),"AA").
--^-------------------
Error: Head argument is not a subtype of its declared type in file fact_cat.dl at line 7
F(cat("x","y"),"AA").
--^-------------------
Error: Non-symbolic use for symbolic functor in file fact_cat.dl at line 7
F(cat("x","y"),"AA").
--^-------------------
3 errors generated, evaluation aborted
